# routes/stripeRoutes.js
@@ -1,55 +1,50 @@
-// stripeRoutes.js
 const express = require('express');
+const cors = require('cors');
 const router = express.Router();
 const Stripe = require('stripe');
 const stripe = Stripe('sk_test_51PK5IeFruPD66GZILbxm0eX7aH5ho2JKIBefBWDPDfwsp29YdUS0vO1UmzD5Nu7jSrNnwHOZtuRSh82lQVTzg9Yg00g0kr3CZ7'); // Use your Stripe secret key
 
 // Middleware to parse request body
 router.use(express.json());
+router.use(cors());
 
-// Endpoint to create a Payment Intent
-router.post('/create-payment-intent', async (req, res) => {
-  const { amount, currency } = req.body;
+const sanitizeInput = (input) => {
+  return input.replace(/[^a-zA-Z0-9\s]/g, '');
+};
+
+//deve receber 
+// Endpoint to create a Checkout Session
+router.post('/create-checkout-session', async (req, res) => {
+  const { amount } = req.body;
 
   try {
-    const paymentIntent = await stripe.paymentIntents.create({
-      amount,
-      currency,
-      automatic_payment_methods: {
-        enabled: true,
-        allow_redirects: 'never' // Disable redirects
-      },
+    const sanitizedCurrency = sanitizeInput(currency);
+    const parsedAmount = parseInt(amount, 10);
+
+    if (isNaN(parsedAmount) || parsedAmount <= 0) {
+      return res.status(400).json({ error: 'Invalid amount' });
+    }
+
+    const session = await stripe.checkout.sessions.create({
+      payment_method_types: ['card'],
+      line_items: [
+        {
+          price_data: {
+            currency: "eur",
+            product_data: {
+              name: 'Test Product',
+            },
+            unit_amount: parsedAmount, // Amount in cents
+          },
+          quantity: 1,
+        },
+      ],
+      mode: 'payment',
+      success_url: 'http://localhost:5173/success',
+      cancel_url: 'http://localhost:5173/failure',
     });
 
-    res.status(200).json({ clientSecret: paymentIntent.client_secret, id: paymentIntent.id });
-  } catch (error) {
-    res.status(500).json({ error: error.message });
-  }
-});
-
-// Endpoint to confirm the Payment Intent using a payment method ID
-router.post('/confirm-payment-intent', async (req, res) => {
-  const { paymentIntentId, paymentMethodId } = req.body;
-
-  try {
-    const paymentIntent = await stripe.paymentIntents.confirm(paymentIntentId, {
-      payment_method: paymentMethodId
-    });
-
-    res.status(200).json(paymentIntent);
-  } catch (error) {
-    res.status(500).json({ error: error.message });
-  }
-});
-
-// Endpoint to check the status of the Payment Intent
-router.get('/payment-intent/:id', async (req, res) => {
-  const { id } = req.params;
-
-  try {
-    const paymentIntent = await stripe.paymentIntents.retrieve(id);
-
-    res.status(200).json(paymentIntent);
+    res.status(200).json({ id: session.id });
   } catch (error) {
     res.status(500).json({ error: error.message });
   }
